--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ VITE_SERVER_URL =http://127.0.0.1:8000
 
 VITE_SERVER_FRONT =http://localhost:3000
 
-VITE_AUTHENTICATION_MODULE =http://127.0.0.1:8000/api/auth
+VITE_AUTHENTICATION_MODULE =http://127.0.0.1:8000/api/signup
 
