--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.3.2",
+    "cors": "^2.8.5",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": "18.2.0",
@@ -58,7 +59,7 @@
     "react-copy-to-clipboard": "5.1.0",
     "react-datetime": "3.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "reactstrap": "8.10.0",
     "sass": "1.69.5"
