--- a/package.json
+++ b/package.json
@@ -43,15 +43,20 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "6.5.1",
     "@mui/material": "^5.15.6",
+    "antd": "^5.14.0",
     "axios": "^1.6.7",
     "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.3.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "jspdf": "^2.5.1",
+    "mdb-react-ui-kit": "^7.2.0",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": "18.2.0",
